--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "school_bank_backend",
+  "name": "school_bank_api",
   "version": "1.0.0",
   "description": "This project is a school assignment developed using Node.js, and it is released under the Mozilla Public License 2.0 (MPL 2.0). The MPL 2.0 license allows for the free use, modification, and distribution of the software.",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc -b",
-    "ts:watch": "tsc --watch",
-    "watch": "nodemon -q dist/index.js"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "clean": "rimraf dist",
+    "prestart": "npm run clean && npm run build",
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@azure/functions": "^4.0.0",
     "bcrypt": "^5.1.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
@@ -27,6 +21,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mssql": "^10.0.2",
     "mysql2": "^3.9.1",
     "request": "^2.88.2"
   },
@@ -35,13 +30,16 @@
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
+    "@types/mssql": "^9.1.5",
     "@types/node": "^20.11.20",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "rimraf": "^5.0.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "main": "dist/index.js"
 }
