feat: types imported & refactoring some things.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/services/*": ["./src/Services/*"],
       "@/handler/*": ["./src/Handler/*"],
-      "@/routes/*": ["./src/Routes/*"],
+      "@/Routes/*": ["./src/Routes/*"],
       "@/Utils/*": ["./src/Utils/*"],
       "@/*": ["./src/*"]
     }
