--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/mssql": "^9.1.5",
     "@types/node": "^20.11.20",
