--- a/example.env
+++ b/example.env
@@ -1,8 +1,3 @@
-API_RATELIMIT_MAX=100
-API_PORT=3000
+API_JWT_TOKEN=""
 
-REDIS_PASSWORD=
-REDIS_HOST=localhost
-REDIS_PORT=6379
-
-MYSQL_POOL_CONNECTION=mysql://root:password@localhost:3306/test
+DB_AUTH=""
