refactor(core): Refactoring core code.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "sourceMap": false,
     "baseUrl": "./src",
     "outDir": "dist",
-    "types": ["@types/node", "discord.js"],
+    "types": ["@types/node"],
     "paths": {
       "@/services/*": ["./src/Services/*"],
       "@/handler/*": ["./src/Handler/*"],
